<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="com.example.myapplication.PantryFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.myapplication.FirstFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_first" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
